Project/AWS_Project/Simple_CPU_Load_Web_App/Configs/Deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  namespace: cpu-load
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-container
        image: 169976490560.dkr.ecr.us-east-1.amazonaws.com/cpu-load-registery:01
        ports:
        - containerPort: 80
        

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"

        livenessProbe:
          tcpSocket:
           port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3


---

apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cpu-load
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 8080
    targetPort: 80
  type: ClusterIP
